syntax = "proto3";
package pb;
import "pb/common.proto";

service UserService {
    rpc SaveUser (User) returns (User);
    rpc GetUserInfo (GetUserInfoReq) returns (GetUserInfoResp);
}

message GetUserInfoReq {
    string code = 1;
    string appid = 2;
    string store_id = 3;
}

message GetUserInfoResp {
    string official_openid = 1;
    User user = 2;
}

message User {
    string user_id = 1;
    WeixinInfo weixin_info = 2;
    string store_id = 3;
    int64 status = 4;

    string current_store_openid = 5;
}
